--- a/lab/dog/index.html
+++ b/lab/dog/index.html
@@ -19,11 +19,15 @@
       }
       canvas {
         display: block;
+        position: fixed;
+        inset: 0;
+        z-index: 1;
       }
       .sound-toggle {
         position: fixed;
         right: 16px;
         bottom: 14px;
+        z-index: 2;
         padding: 8px 14px;
         border: 0;
         border-radius: 999px;
@@ -67,12 +71,19 @@
       }
 
       function setup() {
-        createCanvas(windowWidth, windowHeight);
+        const canvas = createCanvas(windowWidth, windowHeight);
         noStroke();
         colorMode(HSB, 360, 100, 100, 100);
         background(0, 0, 100, 0);
         dogAudio = new Audio("dog_voice.mp3");
         dogAudio.volume = 0.7;
+        canvas.elt.addEventListener("pointerdown", (event) => {
+          if (event.pointerType === "mouse" && event.button !== 0) return;
+          const rect = canvas.elt.getBoundingClientRect();
+          const x = event.clientX - rect.left;
+          const y = event.clientY - rect.top;
+          tryPlayDogVoice(x, y);
+        });
       }
 
       function windowResized() {
@@ -211,15 +222,6 @@
             break;
           }
         }
-      }
-
-      function mousePressed() {
-        tryPlayDogVoice(mouseX, mouseY);
-      }
-
-      function touchStarted() {
-        tryPlayDogVoice(mouseX, mouseY);
-        return false;
       }
 
       function updateSoundButton() {
