--- a/lab/dog/index.html
+++ b/lab/dog/index.html
@@ -132,6 +132,9 @@
         display: none;
         z-index: 3;
       }
+      .key-select .dropdown-menu {
+        min-width: 72px;
+      }
       .dropdown.open .dropdown-menu {
         display: block;
       }
