--- a/lab/dog/index.html
+++ b/lab/dog/index.html
@@ -23,6 +23,9 @@
         inset: 0;
         z-index: 1;
       }
+      #p5_loading {
+        display: none !important;
+      }
       .sound-toggle {
         position: fixed;
         right: 16px;
