--- a/lab/dog/index.html
+++ b/lab/dog/index.html
@@ -286,8 +286,8 @@
         colorMode(HSB, 360, 100, 100, 100);
         background(0, 0, 100, 0);
         dogAudioChoices = [
-          { url: "dog_voice.mp3", weight: 0.8, type: "dog", buffer: null },
-          { url: "guaa.mp3", weight: 0.2, type: "dogAlt", buffer: null }
+          { url: "dog_voice.mp3", weight: 0.8, type: "dog", buffer: null, volume: 0.56 },
+          { url: "guaa.mp3", weight: 0.2, type: "dogAlt", buffer: null, volume: 0.56 }
         ];
         initDropdown("scaleSelect", (value) => {
           scaleMode = value;
@@ -555,7 +555,7 @@
       function playMetallic(freq) {
         if (!audioEnabled || !audioUnlocked || !popBuffer || !audioCtx) return;
         try {
-          playBuffer(popBuffer, 0.6);
+          playBuffer(popBuffer, 0.48);
         } catch (e) {
           // no-op: some browsers may block playback
         }
@@ -630,7 +630,7 @@
         try {
           const picked = pickDogAudio();
           if (!picked) return;
-          playBuffer(picked.buffer, 0.7);
+          playBuffer(picked.buffer, picked.volume ?? 0.56);
           return picked.type;
         } catch (e) {
           // no-op: some browsers may block playback
@@ -645,7 +645,7 @@
           if (roll <= acc) {
             const entry = dogAudioChoices[i];
             if (!entry.buffer) return null;
-            return { buffer: entry.buffer, type: entry.type };
+            return { buffer: entry.buffer, type: entry.type, volume: entry.volume };
           }
         }
         return null;
