--- a/lab/dog/index.html
+++ b/lab/dog/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Colorful Pop Circles</title>
+    <title>Circles and Dogs</title>
+    <meta name="description" content="ランダムに表示されるカラフルな円と、5%の確率で出現する犬。任意のスケールやキーで音が鳴ったりする。" />
     <style>
       :root {
         color-scheme: light;
