--- a/lab/histogram/index.html
+++ b/lab/histogram/index.html
@@ -210,11 +210,11 @@
     <section class="panel fade-in">
       <div class="grid">
         <div>
-          <label for="dataInput">データ（カンマ / 改行 / タブ区切り）</label>
-          <textarea id="dataInput" placeholder="例: 1, 2, 3\n4\t5\n6"></textarea>
+          <label for="dataInput">データ（カンマ or 改行 or タブ区切り）</label>
+          <textarea id="dataInput" placeholder="例: 1,2,3"></textarea>
         </div>
         <div>
-          <div class="muted" style="margin-bottom: 8px;">基本統計量（生データ）</div>
+          <div class="muted" style="margin-bottom: 8px;">基本統計量</div>
           <table class="stats-table">
             <thead>
               <tr>
@@ -223,16 +223,16 @@
               </tr>
             </thead>
             <tbody>
-              <tr><td>COUNT</td><td id="count">-</td></tr>
-              <tr><td>平均値</td><td id="mean">-</td></tr>
-              <tr><td>最小値</td><td id="min">-</td></tr>
-              <tr><td>25% percentile</td><td id="p25">-</td></tr>
-              <tr><td>中央値</td><td id="median">-</td></tr>
-              <tr><td>75% percentile</td><td id="p75">-</td></tr>
-              <tr><td>90% percentile</td><td id="p90">-</td></tr>
-              <tr><td>95% percentile</td><td id="p95">-</td></tr>
-              <tr><td>最大値</td><td id="max">-</td></tr>
-              <tr><td>標準偏差</td><td id="stddev">-</td></tr>
+              <tr><td>count</td><td id="count">-</td></tr>
+              <tr><td>mean</td><td id="mean">-</td></tr>
+              <tr><td>std</td><td id="stddev">-</td></tr>
+              <tr><td>min</td><td id="min">-</td></tr>
+              <tr><td>25%</td><td id="p25">-</td></tr>
+              <tr><td>50%</td><td id="median">-</td></tr>
+              <tr><td>75%</td><td id="p75">-</td></tr>
+              <tr><td>90%</td><td id="p90">-</td></tr>
+              <tr><td>95%</td><td id="p95">-</td></tr>
+              <tr><td>max</td><td id="max">-</td></tr>
             </tbody>
           </table>
         </div>
@@ -247,12 +247,12 @@
             <input type="number" id="binWidth" min="0" step="0.01" value="1" />
           </div>
           <div style="margin-bottom: 12px;">
-            <label for="filterMin">データフィルタ（これ以上を除外）</label>
-            <input type="number" id="filterMin" step="0.01" placeholder="未入力で無効" />
+            <label for="filterMax">フィルタlower</label>
+            <input type="number" id="filterMax" step="0.01" placeholder="これ以下を可視化から除外" />
           </div>
           <div style="margin-bottom: 12px;">
-            <label for="filterMax">データフィルタ（これ以下を除外）</label>
-            <input type="number" id="filterMax" step="0.01" placeholder="未入力で無効" />
+            <label for="filterMin">フィルタupper</label>
+            <input type="number" id="filterMin" step="0.01" placeholder="これ以上を可視化から除外" />
           </div>
           <label class="toggle">
             <input type="checkbox" id="splitZero" />
@@ -260,10 +260,7 @@
           </label>
         </div>
         <div>
-          <div class="actions" style="margin-top: 6px;">
-            <button id="calcBtn">作成する</button>
-            <div id="error" class="error"></div>
-          </div>
+          <div class="error" id="error"></div>
           <div class="muted" style="margin-top: 10px;" id="excludedCount">除外数: -</div>
         </div>
       </div>
@@ -375,7 +372,8 @@
 
       const chartWidth = 720;
       const chartHeight = 320;
-      const pad = { top: 20, right: 20, bottom: 44, left: 48 };
+      const padBottom = (bins.length + (zeroCount > 0 ? 1 : 0)) >= 11 ? 72 : 44;
+      const pad = { top: 20, right: 20, bottom: padBottom, left: 48 };
       const innerW = chartWidth - pad.left - pad.right;
       const innerH = chartHeight - pad.top - pad.bottom;
 
@@ -404,6 +402,7 @@
         `<line x1="${pad.left}" y1="${pad.top}" x2="${pad.left}" y2="${pad.top + innerH}" stroke="rgba(31,35,40,0.2)" />`,
       ];
 
+      const rotateLabels = dataBins.length >= 11;
       dataBins.forEach((b, i) => {
         const x = xFor(i);
         const y = yFor(b.count);
@@ -436,9 +435,15 @@
           label = `[${fmt(b.start)}, ${fmt(b.end)})`;
         }
         const labelX = x + barW / 2;
-        svg.push(
-          `<text x="${labelX}" y="${pad.top + innerH + 18}" text-anchor="middle" font-size="10" fill="#6b7280">${label}</text>`
-        );
+        if (rotateLabels) {
+          svg.push(
+            `<text x="${labelX}" y="${pad.top + innerH + 18}" text-anchor="end" font-size="10" fill="#6b7280" transform="rotate(-45 ${labelX} ${pad.top + innerH + 18})">${label}</text>`
+          );
+        } else {
+          svg.push(
+            `<text x="${labelX}" y="${pad.top + innerH + 18}" text-anchor="middle" font-size="10" fill="#6b7280">${label}</text>`
+          );
+        }
       });
 
       svg.push(
@@ -514,8 +519,9 @@
         `<rect x="${q1X}" y="${midY - boxH / 2}" width="${Math.max(q3X - q1X, 1)}" height="${boxH}" fill="#e0e0e0" stroke="#6b6b6b" stroke-width="2" />`,
         `<line x1="${medX}" y1="${midY - boxH / 2}" x2="${medX}" y2="${midY + boxH / 2}" stroke="#3b3f45" stroke-width="3" />`,
         `<polygon points="${meanX - 4},${midY + 4} ${meanX + 4},${midY + 4} ${meanX},${midY - 4}" fill="#2f8f4e" />`,
-        `<text x="${minX}" y="${midY + boxH / 2 + 18}" text-anchor="start" font-size="11" fill="#6b7280">${formatStat(whiskerMin)}</text>`,
-        `<text x="${maxX}" y="${midY + boxH / 2 + 18}" text-anchor="end" font-size="11" fill="#6b7280">${formatStat(whiskerMax)}</text>`,
+        `<text x="${q1X}" y="${midY + boxH / 2 + 18}" text-anchor="middle" font-size="11" fill="#6b7280">Q1 ${formatStat(q1)}</text>`,
+        `<text x="${medX}" y="${midY + boxH / 2 + 18}" text-anchor="middle" font-size="11" fill="#6b7280">median ${formatStat(median)}</text>`,
+        `<text x="${q3X}" y="${midY + boxH / 2 + 18}" text-anchor="middle" font-size="11" fill="#6b7280">Q3 ${formatStat(q3)}</text>`,
         `</svg>`,
       ];
 
@@ -571,16 +577,66 @@
       document.getElementById("stddev").textContent = formatStat(stddev);
     };
 
+    const formatBinWidth = (v) => {
+      if (!Number.isFinite(v)) return "";
+      if (Number.isInteger(v)) return v.toFixed(0);
+      const fixed = v.toFixed(4);
+      return fixed.replace(/\.?0+$/, "");
+    };
+
+    const computeNiceBinWidth = (values) => {
+      if (values.length === 0) return null;
+      const sorted = [...values].sort((a, b) => a - b);
+      const n = sorted.length;
+      const q1 = quantile(sorted, 0.25);
+      const q3 = quantile(sorted, 0.75);
+      const iqr = q3 - q1;
+      if (!Number.isFinite(iqr) || iqr <= 0) return null;
+      const h0 = (2 * iqr) / Math.cbrt(n);
+      if (!Number.isFinite(h0) || h0 <= 0) return null;
+      const order = Math.pow(10, Math.floor(Math.log10(h0)));
+      const scaled = h0 / order;
+      let niceScaled = 10;
+      if (scaled <= 1.5) niceScaled = 1;
+      else if (scaled <= 3) niceScaled = 2;
+      else if (scaled <= 7) niceScaled = 5;
+      else niceScaled = 10;
+      return niceScaled * order;
+    };
+
     const setExcludedCount = (excluded) => {
       const el = document.getElementById("excludedCount");
       if (el) el.textContent = `除外数: ${excluded}`;
     };
+
+    let binWidthTouched = false;
+    let filterMinTouched = false;
 
     const updateRawStats = () => {
       const raw = document.getElementById("dataInput").value;
       const values = parseData(raw);
       updateStats(values);
       setExcludedCount("-");
+      if (!binWidthTouched) {
+        const nice = computeNiceBinWidth(values);
+        if (nice) {
+          document.getElementById("binWidth").value = formatBinWidth(nice);
+        }
+      }
+      if (!filterMinTouched) {
+        const niceMax = (() => {
+          if (values.length === 0) return null;
+          const sorted = [...values].sort((a, b) => a - b);
+          const q1 = quantile(sorted, 0.25);
+          const q3 = quantile(sorted, 0.75);
+          const iqr = q3 - q1;
+          if (!Number.isFinite(iqr)) return null;
+          return q3 + 1.5 * iqr;
+        })();
+        if (Number.isFinite(niceMax)) {
+          document.getElementById("filterMin").value = formatBinWidth(niceMax);
+        }
+      }
     };
 
     const buildHistogram = () => {
@@ -595,6 +651,9 @@
 
       if (!Number.isFinite(binWidth) || binWidth <= 0) {
         errorEl.textContent = "bin の幅は 0 より大きい数値を入力してください。";
+        document.getElementById("histChart").innerHTML = "";
+        document.getElementById("boxPlot").innerHTML = "";
+        setExcludedCount("-");
         return;
       }
 
@@ -610,8 +669,31 @@
       setExcludedCount(excluded);
     };
 
-    document.getElementById("calcBtn").addEventListener("click", buildHistogram);
-    document.getElementById("dataInput").addEventListener("input", updateRawStats);
+    const debounce = (fn, wait = 250) => {
+      let t = null;
+      return (...args) => {
+        window.clearTimeout(t);
+        t = window.setTimeout(() => fn(...args), wait);
+      };
+    };
+
+    const debouncedBuild = debounce(buildHistogram, 250);
+
+    document.getElementById("dataInput").addEventListener("input", () => {
+      updateRawStats();
+      debouncedBuild();
+    });
+    document.getElementById("binWidth").addEventListener("input", () => {
+      binWidthTouched = true;
+      debouncedBuild();
+    });
+    document.getElementById("filterMin").addEventListener("input", () => {
+      filterMinTouched = true;
+      debouncedBuild();
+    });
+    document.getElementById("filterMax").addEventListener("input", debouncedBuild);
+    document.getElementById("splitZero").addEventListener("change", buildHistogram);
+
     updateRawStats();
   </script>
 </body>
